<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_baseline_movie"
        android:title="@string/title_movie" />

    <item
        android:id="@+id/navigation_tvShow"
        android:icon="@drawable/ic_baseline_tv_show"
        android:title="@string/title_tvshow" />

</menu>